--- a/rcf-core/pom.xml
+++ b/rcf-core/pom.xml
@@ -76,7 +76,11 @@
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+<!--        <dependency>
+            <groupId>com.rcf</groupId>
+            <artifactId>tcp</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>-->
 
 
     </dependencies>
@@ -88,8 +92,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
