add for thread pool

--- a/rcf-registry/pom.xml
+++ b/rcf-registry/pom.xml
@@ -67,7 +67,7 @@
 
 
     </dependencies>
-   <!-- <build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -79,5 +79,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>-->
+    </build>
 </project>
