--- a/rcf-http/pom.xml
+++ b/rcf-http/pom.xml
@@ -12,6 +12,7 @@
     <groupId>com.rcf</groupId>
     <artifactId>http</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
