--- a/rcf-interceptor/pom.xml
+++ b/rcf-interceptor/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.rcf</groupId>
     <artifactId>interceptor</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
