--- a/rcf-registry/pom.xml
+++ b/rcf-registry/pom.xml
@@ -12,6 +12,7 @@
     <groupId>com.rcf</groupId>
     <artifactId>registy</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>registry</name>
     <url>http://maven.apache.org</url>
     <properties>
